# shader-park-offline-renderer

./: CMakeLists.txt  README.md  render.sh
src/: config.h  head.cpp  output.cpp  tail.cpp
